<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/distance_defaultvalue"
        android:key="pref_distance"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:numeric="integer"
        android:singleLine="true"
        android:title="@string/distance" />



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Everything"
        android:entries="@array/array_type"
        android:entryValues="@array/array_type"
        android:key="pref_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/prefered_type" />



</PreferenceScreen>
